[package]
name = "ocho-gato"
description = "Rust library for the GitHub Webhook API"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE-MIT"
homepage = "https://github.com/cdmistman/ocho-gato"
repository = "https://github.com/cdmistman/ocho-gato"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hex = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"

[build-dependencies]
eyre = "0.6.8"
schemars = { version = "0.8.12", default-features = false }
serde = "1.0.159"
serde_json = "1.0.95"
typify = "0.0.12"
